Fix attribution positioning to prevent overlap, improve flex flow of controls

--- a/src/components/attribution.css
+++ b/src/components/attribution.css
@@ -1,8 +1,16 @@
+.attribution{
+  min-height: 550px;
+  bottom: 0px;
+  top: 0;
+  left: 0px;
+  position: absolute;
+}
+
 .attribution .attribution-logo{
   background: url('../assets/cclogo.png');
   background-size: 130px 55px;
   background-repeat: no-repeat;
-  position: fixed;
+  position: absolute;
   bottom: 0px;
   left: 0px;
   width:130px;
