--- a/src/components/controls/toolbar-buttons.css
+++ b/src/components/controls/toolbar-buttons.css
@@ -9,12 +9,14 @@
   margin: 3px 3px;
   cursor: pointer;
   border-radius: 7px;
-  box-shadow: 0 0 5px;
+  border-width: 2px;
   background-color: #f1f3f6;
+  border: 1px solid #dde2e5;
   box-sizing: initial;
 }
 .toolbar-button:hover {
-  box-shadow: 0 0 5px #444;
+  box-shadow: 0 0 2px #444;
+  background-color: #dde2e5;
 }
 .toolbar-button:active {
   box-shadow: 0 0 5px #fff;
@@ -32,10 +34,10 @@
 }
 .toolbar-button div {
   position: relative;
-  width: 28px;
-  height: 28px;
-  top: 3px;
-  left: 3px;
+  width: 26px;
+  height: 26px;
+  top: 4px;
+  left: 4px;
   background-repeat: no-repeat;
   background-size: contain;
 }
